<resources>
    <string name="app_name">PostponeIt</string>
    <string name="create_job_date_hint">Set date</string>
    <string name="create_job_time_hint">Set time</string>
    <string name="create_job_text_hint">Text</string>
    <string name="create_job_send_to">Send to</string>
    <string name="create_job_date_format">%1$s/%2$s/%3$s</string>
    <string name="create_job_hour_format">%1$s:%2$s</string>
    <string name="create_job_requires_acceptance_check_box">Requires acceptance</string>
    <string name="create_job_schedule_button">Submit</string>
    <string name="job_list_send_to">Send to: %1$s</string>
    <string name="job_list_date_time">When: %1$s on %2$s</string>
    <string name="job_list_message">Msg: %1$s</string>
    <string name="home_drawer_open">Open drawer</string>
    <string name="home_drawer_close">Close drawer</string>
    <string name="common_job_status_pending">Pending</string>
    <string name="common_job_status_delivered">Delivered</string>
    <string name="common_job_status_error">Error</string>
    <string name="common_job_status_executed">Executed</string>
    <string name="common_job_status_sent">Sent</string>
    <string name="common_job_status_canceled">Canceled</string>

</resources>
