<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_margin_medium"
        android:layout_marginRight="@dimen/material_margin_medium"
        android:layout_marginTop="@dimen/material_margin_medium">

        <AutoCompleteTextView
            android:id="@+id/contactSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_job_send_to" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectedContactsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_margin_medium"
        android:layout_marginRight="@dimen/material_margin_medium"
        android:layout_marginTop="@dimen/material_margin_medium"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/create_job_time_hint"
                android:inputType="time" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/create_job_date_hint"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_margin_medium"
        android:layout_marginRight="@dimen/material_margin_medium"
        android:layout_marginTop="@dimen/material_margin_medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/smsTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_job_text_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/requiresAcceptanceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/material_margin_medium"
        android:layout_marginStart="@dimen/material_margin_medium"
        android:layout_marginTop="@dimen/material_margin_medium"
        android:text="@string/create_job_requires_acceptance_check_box" />

    <Button
        android:id="@+id/scheduleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/material_margin_medium"
        android:text="@string/create_job_schedule_button" />
</LinearLayout>